--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         </div>
       </div>
     </div>
-    <script src="src/index.js"></script>
+    <!-- <script src="src/index.js" defer></script> -->
+    <script src="src/index_lecture.js" defer></script>
   </body>
 </html>
